# earningsfeed-rust

./: Cargo.toml  LICENSE  README.md
examples/: error_test.rs  integration_test.rs
src/: client.rs  config.rs  error.rs  lib.rs
src/models/: common.rs  company.rs  filing.rs  insider.rs  institutional.rs  mod.rs  params.rs
src/resources/: companies.rs  filings.rs  insider.rs  institutional.rs  mod.rs
