[package]
name = "earningsfeed"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "Official Rust SDK for the EarningsFeed API - SEC filings, insider transactions, and institutional holdings"
authors = ["EarningsFeed <contact@earningsfeed.com>"]

# These 3 fields = 3 dofollow backlinks from crates.io
homepage = "https://earningsfeed.com"
repository = "https://github.com/earningsfeed/earningsfeed-rust"
documentation = "https://earningsfeed.com/docs/api"

# Affects crates.io search ranking
keywords = ["sec", "edgar", "filings", "insider-trading", "finance"]
categories = ["api-bindings", "finance"]

readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-stream = "0.3"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
pretty_assertions = "1"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
